--- a/geps/gep-1494/metadata.yaml
+++ b/geps/gep-1494/metadata.yaml
@@ -4,12 +4,12 @@ number: 1494
 name: HTTP Auth in Gateway API
 status: Provisional
 # Any authors who contribute to the GEP in any way should be listed here using
-# their Github handle.
+# their GitHub handle.
 authors:
   - youngnick
   - jgao1025
 # references is a list of hyperlinks to relevant external references.
-# It's intended to be used for storing Github discussions, Google docs, etc.
+# It's intended to be used for storing GitHub discussions, Google docs, etc.
 references: {}
 # featureNames is a list of the feature names introduced by the GEP, if there
 # are any. This will allow us to track which feature was introduced by which GEP.
